# epanet-msx

./: .gitignore  .mailmap  AUTHORS.txt  CMakeLists.txt  CompileNotes.md  CompileNotes.txt  Doxyfile  LICENSE.txt  Readme.md  Readme.txt  build.sh
CLI/: CMakeLists.txt  CompileNotes.md
CLI/run/: CMakeLists.txt  msxmain.c
CLI/src/: msxmain.c
Legacy DLL/: CMakeLists.txt  CompileNotes.md
Legacy DLL/include/: epanetmsx.h  legacytoolkit.h
Legacy DLL/src/: legacytoolkit.c  mathexpr.c  msxchem.c  msxcompiler.c  msxerr.c  msxfile.c  msxgetters.c  msxgetters.h  msxinp.c  msxmain.c  msxout.c  msxproj.c  msxqual.c  msxrpt.c  msxsetters.c  msxsetters.h  msxtank.c  msxtoolkit.c  msxtypes.h  msxutils.c  msxutils.h  newton.c  newton.h  rk5.c  rk5.h  ros2.c  ros2.h
MSX Core/: CMakeLists.txt
MSX Core/include/: coretoolkit.h  msxenums.h  msxtoolkit.h
MSX Core/src/: coretoolkit.c  hash.c  mathexpr.c  mathexpr.h  mempool.c  msxchem.c  msxcompiler.c  msxdict.h  msxerr.c  msxfuncs.c  msxfuncs.h  msxobjects.c  msxobjects.h  msxout.c  msxqual.c  msxresults.c  msxsetters.c  msxsetters.h  msxtank.c  msxtoolkit.c  msxtypes.h  msxutils.c  msxutils.h  newreport.c  newton.c  newton.h  rk5.c  rk5.h  ros2.c  ros2.h
Transport-Chemistry/: CMakeLists.txt
Transport-Chemistry/include/: msxtypes.h  newtoolkit.h
Transport-Chemistry/src/: mathexpr.c  msxchem.c  msxcompiler.c  msxerr.c  msxfuncs.c  msxgetters.c  msxout.c  msxqual.c  msxsetters.c  msxtank.c  msxutils.c  newtoolkit.c  objects.c  objects.h  rk5.c  ros2.c
doc/: EPANET-MSX Manual.doc  EPANETMSXupdate.txt  MSX Compiler Notes.doc  Readme.txt  Readme_Build.txt  Readme_Compiler.txt  epanetmsx.doc
example-api/: CMakeLists.txt
example-api/include/: examples.h
example-api/src/: batch-nh2cl.c  example.c
include/: epanet2.lib  epanetmsx.h
run/: CMakeLists.txt
scripts/: update-authors.sh
src/: chemistry.c  epanetmsx.c  globals.h  hash.c  hash.h  hashmsx.c  hashmsx.h  inputmsx.c  mathexpr.c  mathexpr.h  mempool.c  msxchem.c  msxcompiler.c  msxdict.h  msxfile.c  msxfuncs.c  msxfuncs.h  msxinp.c  msxmain.c  msxout.c  msxproj.c  msxqual.c  msxrpt.c  msxtank.c  msxtoolkit.c  msxtypes.h  msxutils.c  msxutils.h  newton.c  newton.h  outputmsx.c  project.c  qualitymsx.c  reportmsx.c  rk5.c  rk5.h  ros2.c  ros2.h  toolkitmsx.c  typesmsx.h  (+2 more)
test/: enmsx.c  epanet2.h  msxtest.out  msxtest.sh  net3-cl2.msx  net3-cl2.rpt  net3.inp
test/As5Adsorb/: example-gc.msx  example-vc.msx  example.inp  example.msx  example.rpt
test/Batch-NH2Cl/: NH2cl.eps  batch-nh2cl-gc.msx  batch-nh2cl-vc.msx  batch-nh2cl.inp  batch-nh2cl.msx  batch-nh2cl.rpt  batch-nh2cl.xls  nh2cl.m  readme.txt
test/Net2-CL2/: net2-cl2-gc.msx  net2-cl2-vc.msx  net2-cl2.msx  net2-cl2.rpt  readme.txt
test/Net3-Bio/: net3-bio-gc.msx  net3-bio-vc.msx  net3-bio.inp  net3-bio.msx  net3-bio.rpt  readme.txt
test/Net3-NH2Cl/: Net3-NH2CL-gc.msx  Net3-NH2CL-vc.msx  Net3-NH2CL.msx  net3-nh2cl.rpt  readme.txt
test/UserGuideExample/: example.inp  example.msx  example.rpt  readme.txt
